<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teal Morning</string>
    <string name="streak">Streak: </string>
    <string name="action_settings">Settings</string>
    <string name="button_get_streak">Get Streak</string>
    <string name="api_url">https://script.google.com/macros/s/AKfycbyzd0aar042aq0r0YsO6wTaKOwUr0AMSRsr-eOlQh6ZHW5Fl0Q/exec</string>
    <string name="button_stop">Stop</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_user">User</string>
    <string name="label_login">inspireDo</string>
    <string name="label_login_instruction">Enter you email below</string>
    <string name="button_login">Login</string>

    <string-array name="dank_memes">
        <item>2SAD4ME.mp3</item>
        <item>AIRHORN.mp3</item>
        <item>Darude - Dankstorm.mp3</item>
        <item>HITMARKER.mp3</item>
        <item>MOM GET THE CAMERA.mp3</item>
        <item>Oh Baby A Triple.mp3</item>
        <item>OMG TRICKSHOT CHILD.mp3</item>
        <item>OOOOOOOOHMYGOOOOD.mp3</item>
        <item>SANIC.mp3</item>
        <item>SKRILLEX Scary.mp3</item>
        <item>SMOKE WEEK EVERYDAY.mp3</item>
        <item>WOMBO COMBO.mp3</item>
        <item>DAMN SON WHERED YOU FIND THIS.mp3</item>
        <item>Whatcha Say.mp3</item>
        <item>2SED4AIRHORN.mp3</item>
        <item>tactical nuke.mp3</item>
        <item>intervention 420.mp3</item>
        <item>AIRPORN.mp3</item>
        <item>DEDOTADED WAM.mp3</item>
        <item>DAMN SON WOW.mp3</item>
        <item>GET NOSCOPED.mp3</item>
        <item>AIRHORN SONATA.mp3</item>
        <item>wow ;).mp3</item>
        <item>SHOTS FIRED.mp3</item>
        <item>NEVER DONE THAT.mp3</item>
        <item>SPOOKY.mp3</item>
    </string-array>

    <string name="title_activity_login">Sign In</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_history">History</string>
    <string name="label_up_next">Next Session</string>

</resources>
