<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView android:text="@string/streak" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvStreak" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_streak"
        android:id="@+id/bGetStreak"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbGetStreak"
        android:layout_below="@+id/bGetStreak"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pbDuration"
        android:layout_below="@+id/tvStreak"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:id="@+id/bStop"
        android:layout_below="@+id/pbGetStreak"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:id="@+id/bTogglePlay"
        android:layout_below="@+id/bStop"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_user"
        android:id="@+id/bUser"
        android:layout_below="@+id/bTogglePlay"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
